# EntropySearchCpp

./: .gitignore  COPYRIGHT.txt  README.md
entropy_search/: CMakeLists.txt  package.xml
entropy_search/config/: input_parameters_tmpl.yaml  syn_fun1D_tmpl.yaml
entropy_search/examples/: runES.cpp  runES_onedim.cpp
entropy_search/examples/runES_onedim/: syn_fun2D_tmpl.yaml
entropy_search/examples/runES_onedim/output/: progress_log.yaml  tmp.yaml
entropy_search/include/: CostFunction.hpp  DummyFunction.hpp  EntropySearch.hpp  ExpectedImprovement.hpp  GP_innovation_local.hpp  JointMin.hpp  LogLoss.hpp  LoggingTools.hpp  MathTools.hpp  ReadYamlParameters.hpp  SampleBeliefLocations.hpp  TestPolymorphism.hpp  dH_MC_local.hpp  erfinv.h  insetup.hpp  logsumexp.hpp
entropy_search/plotting/: plotES.py  pyplot_two_subplots.py
entropy_search/plotting/data/: tmp.yaml
entropy_search/src/: CostFunction.cpp  DummyFunction.cpp  EntropySearch.cpp  ExpectedImprovement.cpp  GP_innovation_local.cpp  JointMin.cpp  LogLoss.cpp  LoggingTools.cpp  MathTools.cpp  ReadYamlParameters.cpp  SampleBeliefLocations.cpp  Slice_ShrinkRank_nolog.cpp  TestPolymorphism.cpp  dH_MC_local.cpp  erfinv.cpp  logdet.cpp  logsumexp.cpp  lt_factor.cpp
entropy_search/tests/: CMakeLists.txt  test_EI.cpp  test_EntropySearch.cpp  test_GP_innovation_local.cpp  test_GPmean_optimization.cpp  test_LogLoss.cpp  test_Slice_ShrinkRank_nolog.cpp  test_WriteYaml.cpp  test_WriteYaml.yaml  test_WriteYaml_from_matlab.yaml  test_dH_MC_local.cpp  test_dH_new_loop.cpp  test_dummyfunction.cpp  test_evalfun.cpp  test_joint_min.cpp  test_ker_derivative.cpp  test_sample_belief_locations.cpp
libgp-master/: CMakeLists.txt  FindEigen3.cmake  Sources.cmake  package.xml
libgp-master/examples/: CMakeLists.txt  max_simple_function_example.cc  simple_function_example.cc
libgp-master/include/: cov.h  cov_matern3_iso.h  cov_matern5_iso.h  cov_noise.h  cov_se_ard.h  cov_sum.h  gp.h  math_tools.h  simple_fun_wrapper.h  simple_function.h
libgp-master/include/optimizer/: bfgs_optimizer.h  bfgs_wrapper.h  optimizer.h
libgp-master/src/: cov_matern3_iso.cc  cov_matern5_iso.cc  cov_noise.cc  cov_se_ard.cc  cov_sum.cc  gp.cc  math_tools.cc  simple_fun_wrapper.cc  simple_function.cc
libgp-master/src/optimizer/: bfgs_optimizer.cc  bfgs_wrapper.cc  objective_function.cc
libgp-master/tests/: test_covariance_functions.cc  test_optimizer.cc
yaml-cpp/: CMakeLists.txt  package.xml
