<?xml version="1.0"?>
<package>   
<name>libgp</name>
<version>1.0.0</version>
<description>fork of https://github.com/mblum/libgp</description>
<license>None</license>
<author>Manuel Blum</author>
<maintainer email="alonso.marcovalle@tuebingen.mpg.de">Alonso Marco Valle</maintainer>
<buildtool_depend>catkin</buildtool_depend>
<export>   </export>
</package>
